Update readme one

--- a/One dimensional function/Basic-code-Copy1.ipynb
+++ b/One dimensional function/Basic-code-Copy1.ipynb
@@ -29,8 +29,7 @@
     "\n",
     "## Compute:\n",
     "\n",
-    "1. Golden ratio\n",
-    "3. Stopping condition\n",
+    "1. Fibonacci sequence\n",
     "\n",
     "\n",
     "## Visualisation:"
